# slo-burn-rate

./: CHANGELOG.md  README.md  pyproject.toml
src/burnrate/: __init__.py  alerts.py  budget.py  cli.py  rules.py
tests/: test_alerts.py  test_budget.py  test_cli.py  test_rules.py
