[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "burnrate"
version = "0.1.0"
description = "SLO error-budget and multi-window, multi-burn-rate alerting math (Google SRE model)."
readme = "README.md"
authors = [{ name = "Joshua John", email = "josh202@gmail.com" }]
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["slo", "sre", "error-budget", "burn-rate", "alerting", "observability"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
burnrate = "burnrate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
